<resources>
    <string name="app_name" translatable="false">HT-Cook</string>
    <string name="app_logo_text"><font color="#E6000000">HT</font><font color="#E647408F"><b>Cook</b></font></string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="slogan">Happiness in every meal</string>
    <string name="recipe">Recipe</string>
    <string name="text_loading">Loading</string>
    <string name="likes">Likes</string>
    <string name="count_zero">0</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>
    <string name="back_again">Back again to exit</string>
    <string name="minutes">Minutes</string>
    <string name="let_s_cook">Let\'s Cook</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Cooking Recipe</string>
    <string name="slide_1_desc">Stay up to date with delicious recipes from many restaurants around the world.</string>

    <string name="slide_2_title">Tip &amp; advice</string>
    <string name="slide_2_desc">Life tips and helpful advice to help you have a lot of experience in the kitchen.</string>

    <string name="slide_3_title">Decorating</string>
    <string name="slide_3_desc">Decorating food and interior design helps to impress others.</string>
    <string name="recipe_empty">This recipe is empty</string>
    <string name="check_late">Check another one just enjoy the moment!</string>
    <string name="please_try_something_another_word">Please try something another word!</string>
    <string name="no_recipe_is_favorite">No recipe is Favorite</string>
    <string name="add_some_of_your_favorite_recipe">Add some of your favorite recipe!</string>
    <string name="try_another_some_ingredient">Try another some Ingredient!</string>
    <string name="not_found_this_ingredient">Not found this Ingredient</string>

    <string name="cancel">Cancel</string>
    <string name="is_vietnamese">Language is Vietnamese</string>
    <string name="is_english">Language is English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="random">Random</string>
    <string name="pizza" translatable="false">Pizza</string>
    <string name="drinks">Drinks</string>
    <string name="beef">Beef</string>
    <string name="fish">Fish</string>
    <string name="this_recipe_no_steps">This recipe no Steps</string>
    <string name="process_of_updating">This recipe is in the process of updating</string>
    <string name="step2">Step:</string>
    <string name="slogan_login">Good cooking, \nHappy family</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_pass">Remember Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="go">GO</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="happy_cooking">Happy cooking</string>
    <string name="register_to">Register to be a member of HT-Cook</string>
    <string name="full_name">Full Name</string>
    <string name="password_again">Password again</string>
    <string name="has_account">You registered? Login</string>

    <string name="no_full_name">Empty Full Name</string>
    <string name="no_user_name">Empty Username</string>
    <string name="no_pass">Empty Password</string>
    <string name="no_space">No space</string>
    <string name="no_than_15_word">No more than 15 words</string>
    <string name="has_1_uppercase">Has at least one uppercase character</string>
    <string name="has_1_number">Has at least one number</string>
    <string name="pass_to_short">Password is too short</string>
    <string name="pass_wrong">Password is wrong</string>
    <string name="user_wrong">UserName or Password is wrong</string>
    <string name="sign_up_success">Sign up success, please Login!</string>
</resources>
