<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imvRegBanner"
        android:transitionName="banner_trans"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/banhu" />

    <TextView
        android:id="@+id/tvRegLogo"
        android:transitionName="logo_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/happy_cooking"
        android:textAllCaps="true"
        android:textSize="@dimen/_26sdp"
        android:layout_marginTop="-10dp"
        android:textColor="#CB000000"/>
    <TextView
        android:id="@+id/tvSignup"
        android:transitionName="sign_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#BE000000"
        android:text="@string/register_to"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!--        Edt Full name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Edt Username-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regUsername"
            android:transitionName="username_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Edt password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPassword"
            android:transitionName="password_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Edt password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPasswordAgain"
            android:transitionName="password_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/password_again">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/go"
        android:transitionName="go_trans"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCallLogin"
        android:transitionName="call_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/has_account"
        android:textColor="#BE000000"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

</LinearLayout>