<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <variable
            name="recipeDetail"
            type="com.example.cookbookht.data.model.RecipeDetail" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageDetailView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="411: 351"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:onLoadImage="@{recipeDetail.image}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleDetailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_title_detail"
                android:fontFamily="@font/roboto"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@{recipeDetail.title}"
                android:textColor="@color/color_black_dark"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageDetailView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleDetailTextView">

                <ScrollView
                    android:id="@+id/summaryScrollView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:fadeScrollbars="false"
                    app:layout_constraintDimensionRatio="400: 134"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/summaryTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/roboto"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="@dimen/_3sdp"
                        android:textColor="@color/color_grey_black"
                        android:textSize="@dimen/_13sdp"
                        bind:setTextHtml="@{recipeDetail.summary}" />
                </ScrollView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/countLinear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/summaryScrollView">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/likeCountTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:text="@{recipeDetail.like.toString()}"
                        android:textColor="@color/color_black_dark"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ingredientCountTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        bind:setTextSize="@{recipeDetail.ingredient.size()}"
                        android:textColor="@color/color_black_dark"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/stepCountTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{recipeDetail.readyInMinutes.toString()}"
                        android:textColor="@color/color_black_dark"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/generalityLinear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/countLinear">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/likes" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/ingredient" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/minutes" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/custom_border_button"
                    android:fontFamily="@font/roboto"
                    android:text="@string/let_s_cook"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/generalityLinear" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/progressLayout"
                layout="@layout/loader_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>